<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movielist.MainActivity">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="136dp">


            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_one" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_one"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_two" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_two"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_three" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_three"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_four" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_four"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_five" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_five"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_six" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_six"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_seven" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_seven"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_eight" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_eight"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_nine" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_nine"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:id="@+id/ten"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/category_ten" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_ten"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>